[package]
name = "maxplus"
version = "0.1.0"
edition = "2021"
description="A library for working with max-plus algebra, also called tropical algebra."
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
num = "0.4.0"
